--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   <br/>
   <br/>
   <div class="section">
-  <div class="headertext"><h2>Commands</h2></div>
+  <!--<div class="headertext"><h2></h2></div>
   <div class="textbold">
-  <p>-General Commands-</p>
+  <p>-General Commands-</p>-->
   </div>
   </div>
   <div class="header">
-  <div class="headertext"><p>mcpiworlds | copyright 2021-2022 ⠀<a href='http://uwubot.uk.to/' class="button">Home</a>⠀<a href='http://uwubot.us.to:8080/gb-status' class="button">Dashboard</a>⠀<a href='https://discord.com/api/oauth2/authorize?client_id=789524173399261184&permissions=8&scope=bot' class="button">Invite</a>⠀<a href='#Commands' class="button">Commands</a>⠀<a href='https://top.gg/bot/789524173399261184/vote' class="button">Vote</a></p></div>
+  <div class="headertext"><p>mcpiworlds | copyright 2021-2022 ⠀<a href='https://oxmc.github.io/mcpiworlds/' class="button">Home</a>⠀<a href='https://oxmc.github.io/mcpiworlds/worlds/' class="button">Worlds</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
   </div>
   </body>
 </html>
