--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="title" content="mcpiworlds">
     <meta name="description" content="Tiered of playing the same green worlds? Want a saceship or a hogwarts world? Then goto our downloads page!">
     <meta name="keywords" content="mcpi, pi-worlds, raspberrypi.">
-    <meta name="mcpiworlds" content="index, follow">
+    <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta property="og:image"  content="./images/UwUBotPic.png">
@@ -15,9 +15,9 @@
   <body>
   <title>mcpiworlds homepage</title>
   <div class="wave"></div>
-  <div class=textbigcenter><p>Improve your<br/>Discord server!</p></div>
-  <div class=centeredtext><p>Moderation, server stats, fun bot, and log bot all in one place!</p></div>
-  <div class=textbuttoncenter><a href='https://discord.com/api/oauth2/authorize?client_id=789524173399261184&permissions=8&scope=bot' class="button">INVITE NOW!</a></div>
+  <div class=textbigcenter><p>Improve your<br/>minecraftpi-reborn server!</p></div>
+  <div class=centeredtext><p>Awesome worlds like harrypotter, a spaceship, and more! All in one place!</p></div>
+  <!--<div class=textbuttoncenter><a href='https://discord.com/api/oauth2/authorize?client_id=789524173399261184&permissions=8&scope=bot' class="button">INVITE NOW!</a></div>-->
   <br/>
   <br/>
   <br/>
@@ -29,9 +29,9 @@
   <br/>
   <br/>
   <div class="section">
-  <!--<div class="headertext"><h2></h2></div>
+  <div class="headertext"><h2></h2></div>
   <div class="textbold">
-  <p>-General Commands-</p>-->
+  <!--<p>-General Commands-</p>-->
   </div>
   </div>
   <div class="header">
