--- a/404.html
+++ b/404.html
@@ -11,6 +11,6 @@
   <div>
     <h1>Error 404, Page not found!</h1>
     <p>Uh OH! This page seems to be missing! Please check that the url is correct, or </p>
-    <p><a href="https://oxmc.github.io/pages/suberr.html">report an error</a>.</p>
+    <p><a href="https://github.com/oxmc/ObsidianOS/issues/new">report an error</a>.</p>
   </div>
 </html>
