--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="title" content="mcpiworlds">
-    <meta name="description" content="Tiered of playing the same green worlds? Want a saceship or a hogwarts world? Then goto our downloads page!">
-    <meta name="keywords" content="mcpi, pi-worlds, raspberrypi.">
+    <meta name="title" content="ObsidianOS">
+    <meta name="description" content="ObsidianOS's website.">
+    <meta name="keywords" content="os">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta property="og:image"  content="./images/UwUBotPic.png">
+    <meta property="og:image"  content="./images/siteimage.png">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,400;0,900;1,279;1,900&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
   <body>
-  <title>mcpiworlds homepage</title>
+  <title>ObsidianOS homepage</title>
   <div class="wave"></div>
-  <div class=textbigcenter><p>Improve your<br/>minecraftpi-reborn server!</p></div>
-  <div class=centeredtext><p>Awesome worlds like harrypotter, a spaceship, and more! All in one place!</p></div>
-  <!--<div class=textbuttoncenter><a href='https://discord.com/api/oauth2/authorize?client_id=789524173399261184&permissions=8&scope=bot' class="button">INVITE NOW!</a></div>-->
+  <div class=textbigcenter><p>NEW!<br/>ObsidianOS big sur released!<br/>Download now!</p></div>
+  <!--<div class=centeredtext><p>Awesome worlds like harrypotter, a spaceship, and more! All in one place!</p></div>
+  <div class=textbuttoncenter><a href='https://discord.com/api/oauth2/authorize?client_id=789524173399261184&permissions=8&scope=bot' class="button">INVITE NOW!</a></div>-->
   <br/>
   <br/>
   <br/>
@@ -35,7 +35,7 @@
   </div>
   </div>
   <div class="header">
-  <div class="headertext"><p>mcpiworlds | copyright 2021-2022 ⠀<a href='https://oxmc.github.io/mcpiworlds/' class="button">Home</a>⠀<a href='https://oxmc.github.io/mcpiworlds/worlds/' class="button">Worlds</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
+  <div class="headertext"><p>ObsidianOS | copyright 2021-2022 ⠀<a href='https://oxmc.github.io/ObsidianOS/' class="button">Home</a>⠀<a href='https://oxmc.github.io/ObsidianOS/downloads/' class="button">Downloads</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
   </div>
   </body>
 </html>
