--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://oxmc.github.io/css/boxcenter.css">
+    <link rel="stylesheet" href="https://oxmc.github.io/css/gachastylesheet.css">
     <link rel="icon" type="image/png" href="https://oxmc.github.io/images/missing.png">
 </head>
   <div>
