--- a/404.html
+++ b/404.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="https://oxmc.github.io/css/gachastylesheet.css">
     <link rel="icon" type="image/png" href="https://oxmc.github.io/images/missing.png">
 </head>
-  <div>
-    <h1>Error 404, Page not found!</h1>
-    <p>Uh OH! This page seems to be missing! Please check that the url is correct, or </p>
-    <p><a href="https://github.com/oxmc/ObsidianOS/issues/new">report an error</a>.</p>
-  </div>
+    <div class="center">
+        <div class="a">
+            <h1>Error 404, Page not found!</h1>
+            <p>Uh OH! This page seems to be missing! Please check that the url is correct, or </p>
+            <p><a href="https://github.com/oxmc/ObsidianOS/issues/new">report an error</a>.</p>
+        </div>
+    <div class="a b">
+        <h2> Discord server: </h2>
+        <a href="https://oxmc.github.io/invites/Discord.html?id=GB">
+            <button class="btn"><i class="fa fa-bars"></i> Join </button></a>
+    </div>
+    </div>
 </html>
