--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
   <title>ObsidianOS homepage</title>
   <div class="wave"></div>
-  <div class=textbigcenter><p>NEW!<br/>ObsidianOS big sur released!<br/>Download now!</p></div>
+  <div class=textbigcenter><p style="color:red">NEW!</p><br/><p>ObsidianOS big sur released!<br/>Download now!</p></div>
   <!--<div class=centeredtext><p>Awesome worlds like harrypotter, a spaceship, and more! All in one place!</p></div>
   <div class=textbuttoncenter><a href='https://discord.com/api/oauth2/authorize?client_id=789524173399261184&permissions=8&scope=bot' class="button">INVITE NOW!</a></div>-->
   <br/>
