--- a/404.html
+++ b/404.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://oxmc.github.io/css/gachastylesheet.css">
     <link rel="icon" type="image/png" href="https://oxmc.github.io/images/missing.png">
+    <link rel="stylesheet" href="https://oxmc.github.io/css/Scrollbar.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
     <div class="center">
         <div class="a">
