--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@ szsss
         </div>
     <div class="a b">
         <h2> Discord server: </h2>
-        <a href="https://oxmc.github.io/invites/Discord.html?id=GB">
+        <a href="https://oxmc.github.io/invites/Discord.html?id=OBOS">
             <button class="btn"><i class="fa fa-bars"></i> Join </button></a>
     </div>
     </div>
