--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
   <div class="header">
   <div class="headertext"><p>ObsidianOS | copyright 2021-2022 ⠀<a href='https://oxmc.github.io/ObsidianOS/' class="button">Home</a>⠀<a href='https://oxmc.github.io/ObsidianOS/downloads/' class="button">Downloads</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
   </div>
+  <footer>&copy; Copyright 2021 ObsidianOS & &copy; Copyright 2021 oxmc</footer>
   </body>
 </html>
