--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,400;0,900;1,279;1,900&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+  <style>
+    .cp-text{ color: rgba(0,0,0,.7); text-shadow: 0 1px rgba(255, 255, 255, 0.1);}
+  </style>
   <body>
   <title>ObsidianOS homepage</title>
+  <div class="header">
+  <div class="headertext"><p>ObsidianOS<a href='https://oxmc.github.io/ObsidianOS/' class="button">Home</a>⠀<a href='https://oxmc.github.io/ObsidianOS/downloads/' class="button">Downloads</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
+  </div>
   <div class="wave"></div>
   <div class=textbigcenter><p style="color:red">NEW!</p><p>ObsidianOS big sur released!<br/>Download now!</p></div>
   <!--<div class=centeredtext><p>Awesome worlds like harrypotter, a spaceship, and more! All in one place!</p></div>
@@ -34,9 +40,8 @@
   <!--<p>-General Commands-</p>-->
   </div>
   </div>
-  <div class="header">
-  <div class="headertext"><p>ObsidianOS | copyright 2021-2022 ⠀<a href='https://oxmc.github.io/ObsidianOS/' class="button">Home</a>⠀<a href='https://oxmc.github.io/ObsidianOS/downloads/' class="button">Downloads</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
-  </div>
-  <footer>&copy; Copyright 2021 ObsidianOS & &copy; Copyright 2021 oxmc</footer>
+    <p class="cp-text">
+    © Copyright 2021 ObsidianOS & oxmc. All rights reserved.
+    </p>
   </body>
 </html>
