--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
   <div class="headertext"><h2></h2></div>
   <div class="textbold">
   <!--<p>-General Commands-</p>-->
-  </div>
-  </div>
-    <p class="cp-text">
+  <div class="center">
+  <p class="cp-text">
     © Copyright 2021 ObsidianOS & oxmc. All rights reserved.
-    </p>
+  </p>
+  </div>
+  </div>
+  </div>
   </body>
 </html>
