--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="headertext"><h2></h2></div>
   <div class="textbold">
   <!--<p>-General Commands-</p>-->
-  <div class="center">
+  <div class="textbigcenter">
   <p class="cp-text">
     © Copyright 2021 ObsidianOS & oxmc. All rights reserved.
   </p>
