--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta property="og:image"  content="./images/siteimage.png">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,400;0,900;1,279;1,900&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
   <style>
     .cp-text{ color: rgba(0,0,0,.7); text-shadow: 0 1px rgba(255, 255, 255, 0.1);}
@@ -18,7 +20,7 @@
   <body>
   <title>ObsidianOS homepage</title>
   <div class="header">
-  <div class="headertext"><p>ObsidianOS <a href='https://oxmc.github.io/ObsidianOS/' class="button">Home</a>⠀<a href='https://oxmc.github.io/ObsidianOS/downloads/' class="button">Downloads</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
+  <div class="headertext"><p>ObsidianOS <a href='https://oxmc.github.io/ObsidianOS/' class="button">Home</a>⠀<a href='https://oxmc.github.io/ObsidianOS/downloads/' class="button">Downloads</a> <a href='https://oxmc.github.io/invites/Discord.html?id=OBOS' class="button">Discord</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
   </div>
   <div class="wave"></div>
   <div class=textbigcenter><p style="color:red">NEW!</p><p>ObsidianOS big sur released!<br/>Download now!</p></div>
@@ -37,6 +39,9 @@
   <div class="section">
   <div class="headertext"><h2></h2></div>
   <div class="textbold">
+  <h2> Discord server: </h2>
+        <a href="https://oxmc.github.io/invites/Discord.html?id=OBOS">
+            <button class="btn"><i class="fa fa-bars"></i> Join </button></a>
   <!--<p>-General Commands-</p>-->
   <div class="textbigcenter">
   <p class="cp-text">
