--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 </head>
   <style>
     .cp-text{ color: rgba(0,0,0,.7); text-shadow: 0 1px rgba(255, 255, 255, 0.1);}
+    .btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+szsss
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
   </style>
   <body>
   <title>ObsidianOS homepage</title>
