--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ szsss
   <div class="headertext"><p>ObsidianOS <a href='https://oxmc.github.io/ObsidianOS/' class="button">Home</a>⠀<a href='https://oxmc.github.io/ObsidianOS/downloads/' class="button">Downloads</a> <a href='https://oxmc.github.io/invites/Discord.html?id=OBOS' class="button">Discord</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
   </div>
   <div class="wave"></div>
-  <div class=textbigcenter><p style="color:red">NEW!</p><p>ObsidianOS big sur released!<br/>Download now!</p></div>
+  <div class=textbigcenter><p style="color:red">NEW!</p><p>Obsidian OS 11 Big Sur v1.0 has been released!<br/>Download now!</p></div>
   <!--<div class=centeredtext><p>Awesome worlds like harrypotter, a spaceship, and more! All in one place!</p></div>
   <div class=textbuttoncenter><a href='https://discord.com/api/oauth2/authorize?client_id=789524173399261184&permissions=8&scope=bot' class="button">INVITE NOW!</a></div>-->
   <br/>
