--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="ObsidianOS">
     <meta name="description" content="ObsidianOS's website.">
     <meta name="keywords" content="os">
@@ -16,36 +16,64 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-  <body>
-      <title>ObsidianOS homepage</title>
-  <div class="header">
-  <div class="headertext"><p>ObsidianOS <a href='https://oxmc.github.io/ObsidianOS/' class="button">Home</a>⠀<a href='https://oxmc.github.io/ObsidianOS/downloads/' class="button">Downloads</a> <a href='https://oxmc.github.io/invites/Discord.html?id=OBOS' class="button">Discord</a>⠀<!--<a href='#Commands' class="button">Commands</a>--></p></div>
+<body>
+<div class="loader">
+  <img src="https://media4.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif" alt="Loading..." />
+</div>
+<script>
+window.addEventListener("load", function () {
+  const loader = document.querySelector(".loader");
+  loader.className += " hidden"; // class "loader hidden"
+});
+</script>
+<!--<div class="header">
+</div>-->
+<div id="navbar">
+  <a class="active" href="https://oxmc.github.io/ObsidianOS/">Home</a>
+  <a href="https://oxmc.github.io/ObsidianOS/downloads/">Downloads</a>
+  <a href="https://oxmc.github.io/invites/Discord.html?id=OBOS">Contact</a>
+</div>
+<div class="content">
+  <div class=textbigcenter>
+  <p style="color:red">NEW!</p>
+  <p>Obsidian OS 11 Big Sur v1.0 has been released!
+  <br/>Download now!</p>
+  <button id="btn2" class="btn"><i class="fa fa-download"></i> Download Obsidian OS 11 Big Sur 64bit</button>
   </div>
-  <div class="wave"></div>
-  <div class=textbigcenter><p style="color:red">NEW!</p><p>Obsidian OS 11 Big Sur v1.0 has been released!<br/>Download now!</p></div>
-  <!--<div class=centeredtext><p>Awesome worlds like harrypotter, a spaceship, and more! All in one place!</p></div>
-  <div class=textbuttoncenter><a href='https://discord.com/api/oauth2/authorize?client_id=789524173399261184&permissions=8&scope=bot' class="button">INVITE NOW!</a></div>-->
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br id="Commands" />
-  <br/>
-  <br/>
-  <br/>
-  <div class="section">
-  <div class="headertext"><h2></h2></div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <div class="textbold">
-  <!--<p>-General Commands-</p>-->
-  <div class="textbigcenter">
-  <p class="cp-text">
-    © Copyright 2021 ObsidianOS & oxmc. All rights reserved.
-  </p>
+  <div class="center">
+  <!--Footer-->
+  <div class="section">
+  <footer id="footer">
+    <p class="cp-text">
+      © Copyright 2021 ObsidianOS & oxmc. All rights reserved.
+    </p>
+  </footer>
   </div>
   </div>
   </div>
-    </div>
-  </body>
+</div>
+<script>
+window.onscroll = function() {Navbarscroll();};
+
+var navbar = document.getElementById("navbar");
+var sticky = navbar.offsetTop;
+
+function Navbarscroll() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
+</body>
 </html>
