--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta property="og:image"  content="./images/siteimage.png">
+    <title>ObsidianOS</title>
     <!-- Main css files -->
     <link rel="shortcut icon" type="image/gif" href="./images/siteimage.png">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,400;0,900;1,279;1,900&display=swap" rel="stylesheet"/>
