--- a/downloads/index.html
+++ b/downloads/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://oxmc.github.io/Astrobuild2/css/style/style.css" type="text/css">
     <link rel="stylesheet" href="https://oxmc.github.io/Astrobuild2/css/style/loading.css" type="text/css">
+    <style>
+
+
+footer {
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  background-color: #233339;
+  font-weight: 900;
+  font-size: 15px;
+  height: auto;
+  color:grey;
+  text-align: center;
+  display: center;
+  text-shadow: 0 1px rgba(255, 255, 255, 0.1);
+  bottom: 0;
+}
+    </style>
   </head>
     <body>
       <div class="loader">
@@ -23,20 +41,35 @@
   <h1>Download the latest version of ObsidianOS 7</h1>
   <button onclick="Download('1')" id="dnlbtn" class="button2"><i id="icon1" class="fa fa-download"></i> Download Obsidian OS 7 32bit </button>
   <h1>Download the latest version of ObsidianOS 11 Big Sur</h1>
-  <button onclick="Download('2')" id="dnlbtn1" class="button2"><i id="icon2" class="fa fa-download"></i> Download Obsidian OS 11 Big Sur 64bit </button>
+  <button onclick="Download('2')" id="dnlbtn2" class="button2"><i id="icon2" class="fa fa-download"></i> Download Obsidian OS 11 Big Sur 64bit </button>
   <h1>Download the latest version of the ObsidianOS Imager</h1>
-  <button onclick="Download('3')" id="dnlbtn1" class="button2"><i id="icon3" class="fa fa-download"></i> Download The ObsidianOS Imager </button>
+  <button onclick="Download('3')" id="dnlbtn3" class="button2"><i id="icon3" class="fa fa-download"></i> Download The ObsidianOS Imager </button>
   </div>
   <script>
     var downloadbtn = document.getElementById("dnlbtn")
+    var downloadbtn2 = document.getElementById("dnlbtn2")
+    var downloadbtn3 = document.getElementById("dnlbtn3")
 
 function Download(id){
     if ( id == "1" ) {
-      //alert("Downloading pi-apps");
       //downloadbtn.innerHTML = "Loading";
       downloadbtn.innerHTML = "";
       document.getElementById("dnlbtn").className = "fa button2 fa-spinner";
       document.getElementById("dnlbtn").className = "fa button2 fa-spinner";
+    } else if ( id == "2" ) {
+      downloadbtn2.innerHTML = "";
+      document.getElementById("dnlbtn2").className = "fa button2 fa-spinner";
+      document.getElementById("dnlbtn2").className = "fa button2 fa-spinner";
+      //window.location.assign('URL here');
+
+    }  else if ( id == "3" ) {
+      downloadbtn3.innerHTML = "";
+      document.getElementById("dnlbtn3").className = "fa button2 fa-spinner";
+      document.getElementById("dnlbtn3").className = "fa button2 fa-spinner";
+      window.location.assign('https://oxmc.github.io/ObsidianOS/ObsidianOS-Imager/');
+      
+      // Old location
+      //window.location.assign('https://oxmc.github.io/ObsidianOS/files/ob-imager_1.0_armhf.deb');
     } else if ( id == "repo" ) {
       //alert("Redirecting to github repo")
       window.location.assign('https://github.com/ObsidianOS7/Obsidian-OS');
@@ -45,9 +78,11 @@ function Download(id){
     }
 };
   </script>
-<footer>
-Copyright 2020-2021 ObsidianOS and oxmc
-</footer>
+  <footer id="footer">
+    <p id="cp-text">
+      © Copyright 2021 ObsidianOS & oxmc. All rights reserved.
+    </p>
+  </footer>
 </div>
 </body>
 </html>
