--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ window.addEventListener("load", function () {
   <p style="color:red">NEW!</p>
   <p>Obsidian OS 11 Big Sur v1.0 has been released!
   <br/>Download now!</p>
-  <button id="btn2" class="btn"><i class="fa fa-download"></i> Download Obsidian OS 11 Big Sur 64bit</button>
+  <button onclick="window.location.assign('https://oxmc.github.io/ObsidianOS/downloads/');" id="btn2" class="btn"><i class="fa fa-download"></i> Download Obsidian OS 11 Big Sur 64bit</button>
   </div>
   <br>
   <br>
