--- a/ObsidianOS-Imager/index.html
+++ b/ObsidianOS-Imager/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/gif" href="../images/siteimage.png">
-    <title>ObsidianOS Downloads</title>
+    <title>ObsidianOS-Imager Downloads</title>
     <!-- css -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://oxmc.github.io/Astrobuild2/css/style/style.css" type="text/css">
@@ -35,6 +35,13 @@
         text-shadow: 0 1px rgba(255, 255, 255, 0.1);
         bottom: 0;
       }
+      
+      .codeblock {
+        background-color: #eee;
+        border: 1px solid #999;
+        display: block;
+        padding: 20px;
+      }
     </style>
     <!-- HTML view -->
   </head>
@@ -50,12 +57,18 @@
       </script>
 <div class="center">
 <div class="a">
+  <h1>Add the ObsidianOS-repo to your raspberry pi!</h1>
+  <p>Open terminal and paste this into it, <code class="codeblock">wget -O - http://oxmc.github.io/ObsidianOS/files/addrepo.sh | bash</code><p>
+  <p>Now paste, <code class="codeblock">sudo apt-get install ob-imager</code> to get the latest ObsidianOS-Imager on your raspberry pi!</p>
+</div>
+<div class="a">
   <h1>Download the latest version of the ObsidianOS-Imager for the raspberry pi</h1>
   <button onclick="Download('1')" id="dnlbtn" class="button2"><i id="icon1" class="fa fa-download"></i> Download ObsidianOS-Imager rpi </button>
   <!--<h1>Download the latest version of ObsidianOS 11 Big Sur</h1>
   <button onclick="Download('2')" id="dnlbtn2" class="button2"><i id="icon2" class="fa fa-download"></i> Download Obsidian OS 11 Big Sur 64bit </button>
   <h1>Download the latest version of the ObsidianOS Imager</h1>
   <button onclick="Download('3')" id="dnlbtn3" class="button2"><i id="icon3" class="fa fa-download"></i> Download The ObsidianOS Imager </button>-->
+  </div>
   </div>
   <script>
     var downloadbtn = document.getElementById("dnlbtn")
@@ -73,7 +86,7 @@ function Download(id){
     } else if ( id == "2" ) {
       downloadbtn2.innerHTML = " Redirecting...";
       document.getElementById("dnlbtn2").className = "fa button2 fa-spinner";
-      window.location.assign('https://mega.nz/file/qgATySCb#M0Oqd01AhBbjZXuwxWKv3eLj8JEetamJnREwK4-lEq0');
+      window.location.assign('http://oxmc.github.io/ObsidianOS/files/addrepo.sh');
 
     }  else if ( id == "3" ) {
       downloadbtn3.innerHTML = " Redirecting...";
