--- a/ObsidianOS-Imager/index.html
+++ b/ObsidianOS-Imager/index.html
@@ -23,6 +23,7 @@
     <style>
       footer {
         position: absolute;
+        bottom: 0;
         left: 0px;
         width: 100%;
         background-color: #233339;
@@ -42,11 +43,22 @@
         display: block;
         padding: 20px;
       }
+      
+      #page-container {
+        position: relative;
+        min-height: 100vh;
+      }
+
+	  #content-wrap {
+        padding-bottom: 2.5rem;    /* Footer height */
+      }
     </style>
     <!-- HTML view -->
   </head>
     <body>
-      <div class="loader">
+      <div id="page-container">
+        <div id="content-wrap">
+          <div class="loader">
           <img src="https://media4.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif" alt="Loading..." />
       </div>
       <script>
@@ -108,6 +120,8 @@ function Download(id){
       © Copyright 2021 ObsidianOS & oxmc. All rights reserved.
     </p>
   </footer>
-</div>
+        </div>
+        <footer id="footer"></footer>
+      </div>
 </body>
 </html>
