Add Apt-repo to navbar.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="ObsidianOS">
-    <meta name="description" content="ObsidianOS's website.">
+    <meta name="description" content="Obsidian OS 11 Big Sur v1.0 has been released!">
     <meta name="keywords" content="os">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta property="og:image"  content="./images/siteimage.png">
+    <meta property="og:image"  content="https://oxmc.github.io/ObsidianOS/images/siteimage.png">
     <title>ObsidianOS</title>
     <!-- Main css files -->
-    <link rel="shortcut icon" type="image/gif" href="./images/siteimage.png">
+    <link rel="shortcut icon" type="image/gif" href="https://oxmc.github.io/ObsidianOS/images/siteimage.png">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,400;0,900;1,279;1,900&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./css/style.css">
     <!-- Add icon library -->
@@ -32,6 +32,7 @@ window.addEventListener("load", function () {
 <div id="navbar">
   <a class="active" href="https://oxmc.github.io/ObsidianOS/">Home</a>
   <a href="https://oxmc.github.io/ObsidianOS/downloads/">Downloads</a>
+   <a href="https://oxmc.github.io/ObsidianOS/apt/">Apt-repo</a>
   <a href="https://oxmc.github.io/invites/Discord.html?id=OBOS">Contact</a>
 </div>
 <div class="content">
